hdone/objects/Record_Value__mdt.object
<CustomObject>
    <description>Record Values used to determine what other records are required for processing</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__mdt</referenceTo>
        <relationshipLabel>Record Values</relationshipLabel>
        <relationshipName>Record_Values</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>CreateIfMissing__c</fullName>
        <description>Indiciates if record should be created if missing</description>
        <inlineHelpText>Indiciates if record should be created if missing</inlineHelpText>
        <label>CreateIfMissing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieldLookup__c</fullName>
        <description>Field required for lookup. Could be done with Dynamic Apex</description>
        <inlineHelpText>Field for lookup</inlineHelpText>
        <label>FieldLookup</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName1__c</fullName>
        <description>Fieldname for lookup</description>
        <inlineHelpText>Fieldname for lookup</inlineHelpText>
        <label>FieldName1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldName2__c</fullName>
        <description>FieldName2</description>
        <inlineHelpText>FieldName2</inlineHelpText>
        <label>FieldName2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue2__c</fullName>
        <description>FieldValue2</description>
        <inlineHelpText>FieldValue2</inlineHelpText>
        <label>FieldValue2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieldValue__c</fullName>
        <description>Value of field</description>
        <inlineHelpText>Value of fiel</inlineHelpText>
        <label>FieldValue</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is record active?</description>
        <inlineHelpText>Is record active?</inlineHelpText>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Object__c</fullName>
        <label>Product Object</label>
        <referenceTo>Product_Object__mdt</referenceTo>
        <relationshipLabel>Record Values</relationshipLabel>
        <relationshipName>Record_Values</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Record Value</label>
    <pluralLabel>Record Values</pluralLabel>
</CustomObject>